--- a/src/layouts/publicUpload.css
+++ b/src/layouts/publicUpload.css
@@ -1,24 +1,34 @@
-.kratos-form-container{
-    height: 100vh;
-    margin: 0px auto;
-    width: 40%;
+.kratos-upload{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     padding: 2rem;
-    
-}
-.kratos-upload-first{
-    background: url("../assets/img/bosse.jpg");
+    background-image: url("../assets/img/calme.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 2rem;
-    color: white;
+    width: 100vw;
     height: 100vh;
-
 }
 
 .kratosText{
-    background: #00000060;
-    border: 1px solid rgba(255, 255, 255, 0.274);
-    border-radius: 10px;
     padding: 2rem;
-    margin-top: 4rem;
+    background: #00000060;
+    color: white;
+    margin-top: 0.5rem;
+    border-radius: 15px solid white;
+    box-shadow: 0px 0px 5px solid #00000090;
+}
+
+.filepond--root{
+    max-width: 28rem;
+    width: 20rem;
+    margin: 0px auto;
+    box-shadow: 0px 0px 15px black;
+    margin-top: 1rem;
+    border-radius: 15px;
+}
+
+.filepond--drop-label{
+    background: rgba(4, 70, 250, 0.192)
 }
